# gtsam_catkin

./: CMakeLists.txt
patches/: 0001-Add-serialization-include-to-remedy-issue-229.patch  0002-Allow-binding-to-optional-rvalues-We-should-fix-this.patch  0003-Updated-all-comma-initializer-usages-to-use-.finishe.patch  apply_patches.sh
